<resources>
    <string name="app_name" translatable="false">UUID 0xFD6F Scanner</string>
    <string name="tab_text_1">Active Beacons</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>

    <string name="notifyChannelBase">Core Service</string>
    <string name="app_service_title">Background Tracer Service</string>
    <string name="app_service_msgOff">Please start Scanner</string>
    <string name="app_service_msgOffNoPermissions">Please start the App in order to restart the Scanner</string>
    <string name="app_service_msgNoBt">To use this feature, turn on Bluetooth</string>
    <string name="app_service_msgNoLocation">To use this feature, turn on Location service</string>
    <string name="app_service_msgNoBoth">To use this feature, turn on Bluetooth &amp; Location service</string>

    <string name="app_service_msgScan1">Scanning Environment&#8230;</string>
    <string name="app_service_msgScan2">[found: %1$d]</string>

    <string name="menu_finish">Close App</string>
    <string name="menu_exit">Terminate Service</string>
    <string name ="menu_exit_notify_action">EXIT</string>
    <string name ="menu_start_notify_action">Start Scan</string>
    <string name ="menu_stop_notify_action">Stop Scan</string>
    <string name ="menu_start_bt_action">Enable Bluetooth</string>
    <string name ="menu_start_location_action">Enable Location service</string>
    <string name ="menu_start_both_action">Enable services</string>

    <string name="act_enable_bt">Please enable Bluetooth</string>
    <string name="act_enable_location">Please enable Location service</string>
    <string name="act_enable_both">Please enable Bluetooth &amp; Location service</string>
    <string name="act_total_beacons">Total: %1$d</string>
    <string name="act_active_beacons">Active Beacons: %1$d</string>
    <string name ="act_active_enf_beacons">ExpNotif. Beacons: %1$d</string>
    <string name ="act_active_scf_beacons">AntiCovid Beacons: %1$d</string>
    <string name="menu_start">Start Scan Service</string>
    <string name="menu_stop">Stop Scan Service</string>
    <string name ="act_NEAR">NEAR: %1$d</string>
    <string name ="act_MEDIUM">MEDIUM: %1$d</string>
    <string name ="act_FAR">FAR: %1$d</string>
    <string name ="act_BAD">BAD: %1$d</string>

    <string name="menu_settings">Settings&#8230;</string>

    <string name="pref01_KEY" translatable="false">SETTINGS_01</string>
    <string name="PKEY_IGNOREBATTERYOPT" translatable="false">BATTERY_OPT</string>
    <string name="PKEY_AUTOSTART" translatable="false">AUTOSTART</string>
    <string name="DVAL_AUTOSTART" translatable="false">false</string>
    <string name="PKEY_AUTOSTARTBLUETOOTH" translatable="false">AUTOSTARTBLUETOOTH</string>
    <string name="DVAL_AUTOSTARTBLUETOOTH" translatable="false">false</string>
    <string name="PKEY_SHOWTOTAL" translatable="false">SHOWTOTALBEACONNUM</string>
    <string name="DVAL_SHOWTOTAL" translatable="false">false</string>
    <string name="PKEY_SCANMODE" translatable="false">SCANMODE</string>
    <string name="DVAL_SCANMODE" translatable="false">ENF</string>
    <string name="PKEY_FORCEGPS" translatable="false">FORCEGPS</string>
    <string name="DVAL_FORCEGPS" translatable="false">true</string>

    <string name="PKEY_GROUPBYSIGSTRENGTH" translatable="false">GROUPBYSIGSTRENGTH</string>
    <string name="DVAL_GROUPBYSIGSTRENGTH" translatable="false">false</string>
    <string name="PKEY_GROUPNEARVAL" translatable="false">GROUPNEARVAL</string>
    <string name="DVAL_GROUPNEARVAL" translatable="false">82</string>
    <string name="PKEY_GROUPMEDVAL" translatable="false">GROUPMEDVAL</string>
    <string name="DVAL_GROUPMEDVAL" translatable="false">90</string>
    <string name="PKEY_USETHRESHOLD" translatable="false">USETHRESHOLD</string>
    <string name="DVAL_USETHRESHOLD" translatable="false">false</string>
    <string name="PKEY_THRESHOLDVAL" translatable="false">THRESHOLDVAL</string>
    <string name="DVAL_THRESHOLDVAL" translatable="false">98</string>

    <string name="pref01_ignorebattery_title">Prioritized Background Activity</string>
    <string name="pref01_ignorebattery_on">Battery optimization has been disabled - To enabled it again you need to do this via the general device settings.</string>
    <string name="pref01_ignorebattery_off">You should only enabled this setting when you encounter unexpected app terminations by the OS.</string>

    <string name="pref01_TITLE">Settings</string>
    <string name="pref01_AUTOSTART_TITLE">Service Autostart</string>
    <string name="pref01_AUTOSTART_OFF">OFF</string>
    <string name="pref01_AUTOSTART_ON">ON - The \'Background Tracer Service\' will be automatically started after a device reboot (after successful login)</string>

    <string name="pref01_AUTOSTARTBLUETOOTH_TITLE">Auto enable Bluetooth</string>
    <string name="pref01_AUTOSTARTBLUETOOTH_OFF">OFF - The Bluetooth state will not be adjusted on service start.</string>
    <string name="pref01_AUTOSTARTBLUETOOTH_ON">ON - Bluetooth is activated automatically (if accidentally deactivated)\n[Feature disabled in flight-mode]</string>

    <string name="pref01_SHOWTOTAL_TITLE">Display total number</string>
    <string name="pref01_SHOWTOTAL_OFF">OFF</string>
    <string name="pref01_SHOWTOTAL_ON">ON - The app also shows the total of all beacons found so far (restart the service to reset).</string>

    <string name="pref01_SCANMODE_TITLE">Country\'s (UUIDs)</string>
    <string-array name="pref01_SCANMODE_VALUES" translatable="false">
        <item name="01">ENF</item>
        <item name="02">FRA</item>
        <item name="03">ENF_FRA</item>
    </string-array>
    <string-array name="pref01_SCANMODE_ENTRIES">
        <item name="01">UUID 0xFD6F: All Countries make use of the Exposure Notification Framework like the German CoronaWarnApp</item>
        <item name="02">UUID 0xFD64: France (TousAntiCovid)</item>
        <item name="03">UUID 0xFD6F &amp; 0xFD64: France (TousAntiCovid) and Exposure Notification Framework based apps like the German CoronaWarnApp</item>
    </string-array>

    <string name="pref01_country">Countries that make use of the Exposure Notification Framework (UUID 0xFD6F)</string>
    <string translatable="false" name="pref01_countrylist">Australia, Austria, Belgium, Brazil, Brunei, Canada, Czech Republic, Croatia, Denmark, Ecuador, Estonia, Finland, Germany, Gibraltar, Ireland, Italy, Japan, Kenya, Latvia, Malta, Mexico, Netherlands, Northern Ireland, Philippines, Poland, Portugal, Saudi Arabia, Slovenia, South Africa, Spain, Switzerland, United Kingdom, Uruguay, USA [Alabama, Arizona, Nevada, New York, North Dakota, South Carolina, Virginia]</string>

    <string name="pref02_SIGSTRENGTH_title">Expert Settings&#8230;</string>
    <string name="pref02_SIGSTRENGTH_summary">Selected value is: -%1$sdb</string>
    <string name="pref02_GROUPBYSIGSTRENGTH_title">Group by Signal strength</string>
    <string name="pref02_GROUPBYSIGSTRENGTH_off">No grouping according to signal strengths</string>
    <string name="pref02_GROUPBYSIGSTRENGTH_on">Group the beacons by their signal strength into NEAR/MEDIUM/FAR</string>
    <string name="pref02_GROUPNEARVAL_title">NEAR [def value: -82db]</string>
    <string name="pref02_GROUPMEDVAL_title">MEDIUM [def value: -90db]</string>
    <string name="pref02_USETHRESHOLD_title">Use Threshold</string>
    <string name="pref02_USETHRESHOLD_off">All found beacons will be listed (no matter how weak the signal strength is)</string>
    <string name="pref02_USETHRESHOLD_on">If the signal strength of a beacon is below the specified threshold it will not taken into account</string>
    <string name="pref02_THRESHOLDVAL_title">Threshold value [def value: -98db]</string>
    <string name="pref02_FORCEGPS_title">Force GPS Signal</string>
    <string name="pref02_FORCEGPS_off">\'Network\' and \'Passive\' location provider(s) will be also accepted</string>
    <string name="pref02_FORCEGPS_on">Active GPS location provider required</string>
</resources>