<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

	<androidx.preference.SwitchPreferenceCompat
		app:key="@string/PKEY_AUTOSTART"
		app:defaultValue="@string/DVAL_AUTOSTART"
		app:title="@string/pref01_AUTOSTART_TITLE"
		app:summaryOff="@string/pref01_AUTOSTART_OFF"
		app:summaryOn="@string/pref01_AUTOSTART_ON" />

	<androidx.preference.ListPreference
		app:key="@string/PKEY_SCANMODE"
		app:defaultValue="@string/DVAL_SCANMODE"
		app:title="@string/pref01_SCANMODE_TITLE"
		app:entries="@array/pref01_SCANMODE_ENTRIES"
		app:entryValues="@array/pref01_SCANMODE_VALUES"
		app:summary="%s"
	/>
	<Preference
		app:title="@string/pref01_country"
		app:summary="@string/pref01_countrylist"
	/>

</androidx.preference.PreferenceScreen>